exam/_misc/k8s-product-setup/registry/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  - port: 443
    protocol: TCP
    targetPort: 443
    name: https
  selector:
    app: registry
  type: LoadBalancer
  externalIPs:
  - <IP주소>
